--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Yktaero.space Service Status Page</title>
+    <title>Состояние серверов - yktaero.space</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="index.js"></script>
@@ -9,7 +9,7 @@
     <div class="pageContainer">
       <div class="headline">
         <img src="logo.svg" alt="Logo" width="200px" />
-        <span> System Status </span>
+        <span> Состояние серверов </span>
       </div>
       <div id="reports" class="reportContainer"></div>
       <div id="tooltip" class="tooltip" style="opacity: 0">
@@ -37,13 +37,13 @@
           </div>
           <div class="statusSubtitle">
             <div class="sectionUrl"><a href="$url">$url</a></div>
-            <div class="statusUptime">$upTime in the last 30 days</div>
+            <div class="statusUptime">$upTime доступности в последние 30 дней</div>
           </div>
         </div>
       </div>
     </div>
     <footer>
-      Forked from
+      Форкнуто из 
       <a href="https://github.com/statsig-io/statuspage/"
         >Statsig's Open-Source Status Page</a
       >.
