--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <span> Состояние серверов </span>
       </div>
       <div id="reports" class="reportContainer"></div>
+      <div id="incidents" class="incidentsContainer">
+        <div class="statusContainer">
+          <div class="statusHeader">
+            <h3 class="incidentReportsHeader">Отчеты о проблемах</h3>
+          </div>
+          <div id="incidentReport">
+            Тут пока ничего нет
+          </div>
+        </div>
+      </div>
       <div id="tooltip" class="tooltip" style="opacity: 0">
         <div id="tooltipArrow" class="tooltipArrow"></div>
         <div id="tooltipDateTime" class="tooltipDateTime"></div>
