--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
   </body>
   <script>
     genAllReports();
+    window.addEventListener('load', () => {
+      genIncidentReport();
+    });
   </script>
 </html>
