--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Состояние серверов - yktaero.space</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
+    <script async src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/dompurify@2.3.5/dist/purify.min.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
