--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="statusSubtitle">
             <div class="sectionUrl"><a href="$url">$url</a></div>
-            <div class="statusUptime">$upTime доступности в последние 30 дней</div>
+            <div class="statusUptime">$upTime доступности за последние 30 дней</div>
           </div>
         </div>
       </div>
